Fix alignment in side bar.
The players on the same lane weren't properly being lined up.
The players on the red team were misaligned.

--- a/src/custom.css
+++ b/src/custom.css
@@ -102,3 +102,7 @@
     -webkit-transform: scaleY(1.0);
   }
 }
+
+body {
+  line-height: 1;
+}
